force-app/main/default/objects/echosign_dev1__Agreement_Notification__c/echosign_dev1__Agreement_Notification__c.object-meta.xml
<CustomObject>
    <label>Agreement Notification</label>
    <nameField>
        <displayFormat>ET-{0000000000}</displayFormat>
        <label>Agreement Notification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>