force-app/main/default/objects/echosign_dev1__Agreement_Notification__c/fields/echosign_dev1__Agreement_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Event_Type__c</fullName>
    <label>Agreement_Event_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>