force-app/main/default/objects/echosign_dev1__Agreement_Notification__c/fields/echosign_dev1__Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement_Status__c</fullName>
    <label>Agreement_Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>