force-app/main/default/objects/echosign_dev1__Agreement_Notification__c/fields/echosign_dev1__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>