force-app/main/default/objects/echosign_dev1__Agreement_Notification__c/fields/echosign_dev1__Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Notification_Type__c</fullName>
    <description>This value will classify the notification type that whether it is inserted from push agreement callback or normal sign notification.</description>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTO_UPDATE</fullName>
                <default>true</default>
                <label>AUTO_UPDATE</label>
            </value>
            <value>
                <fullName>CALLBACK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>